# dottracker

./: .gitignore  CMakeLists.txt  README.md  build.sh  example.conf  files.conf
cmake/: Options.cmake  PostBuild.cmake
include/: enviroment.hxx  filehash.hxx  globals.hxx  help.hxx  parser.hxx  version.hxx.in
include/commands/: diff.hxx  untracked.hxx  update.hxx
include/utils/: help.hxx  read_config.hxx
include/utils/file/: filediff.hxx  filehash.hxx  files_equals.hxx
mine/: files.conf
release/: v1.0.0.md
src/: args.cxx  commands.cxx  filehash.cxx  main.cxx
src/commands/: diff.cxx  untracked.cxx  update.cxx
src/utils/: read_config.cxx
src/utils/file/: filediff.cxx  filehash.cxx  files_equals.cxx
